--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "@shadcn/ui": "^0.0.4",
     "@testing-library/react": "^16.1.0",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cra-template": "1.2.0",
     "dotenv": "^16.4.7",
     "firebase": "^11.0.2",
+    "framer-motion": "^11.13.5",
     "lucide-react": "^0.468.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
